<resources>
    <string name="app_name">Menus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">نام کاربر</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favorites">دسته بندی ها</string>
    <string name="register">صفحه اصلی</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hi">Hi</string>
    <string name="enter">ورود</string>
    <string name="cancel">انصراف</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="username">username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arfahimi_gmail_com">Arfahimi@gmail.com</string>
    <string name="family">family</string>
    <string name="name">name</string>
    <string name="submit">Submit</string>
</resources>
